Bug 337914 - Erroneous row selection/highlighting when clicking/hovering over vertical record marker of table view
Summary: Erroneous row selection/highlighting when clicking/hovering over vertical rec...
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Tables (other bugs)
Version First Reported In: 2.8.5
Platform: Other All
: NOR minor
Target Milestone: 2.8.6
Assignee: Jarosław Staniek
URL:
Keywords:
: 341750 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-07-30 15:23 UTC by Jarosław Staniek
Modified: 2015-10-31 21:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8.6
Sentry Crash Report:


Attachments
Difference: position of selected row and position of point clicked on the record marker (25.49 KB, image/png)
2014-07-30 15:25 UTC, Jarosław Staniek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2014-07-30 15:23:50 UTC
Erroneous row selection when clicking on vertical record marker of table view.

To reproduce, use table that have more records than can fit in the view (vertically). Then scroll down a bit (one record or more). Then click on the vertical record marker as presented on attached screenshot. 

Result: scrolling offset is not considered.
Expected: corresponding row is selected.

The same misbehaviour is present in row highlighting when the vertical record marker is hovered with mouse cursor.
Comment 1 Jarosław Staniek 2014-07-30 15:25:44 UTC
Created attachment 88035 [details]
Difference: position of selected row and position of point clicked on the record marker
Comment 2 Jarosław Staniek 2014-07-30 15:30:58 UTC
Moreover, highlighting a row should not force it to be entirely visible (vertically) when it's partially visible. The fix should address this too.
Comment 3 Jarosław Staniek 2014-07-30 15:38:33 UTC
This fix will also address issue reported at https://forum.kde.org/viewtopic.php?f=221&t=122102 "Any time the cursor crosses the border between the Project Navigator and the Table Data (i.e. over the record marker), the table abruptly jumps to the beginning."
Comment 4 Jarosław Staniek 2014-07-31 20:48:39 UTC
Git commit 8ca7607e13dd6cd5c55efc32c7aece89dc8978da by Jaroslaw Staniek.
Committed on 30/07/2014 at 15:31.
Pushed by staniek into branch 'master'.

Correct row selection/highlighting when clicking/hovering over record marker

(in table view)

Moreover, highlighting a row should not force it to be entirely visible (vertically) when it's partially visible.

This fix will also addresses issue reported at https://forum.kde.org/viewtopic.php?f=221&t=122102 "Any time the cursor crosses the border between the Project Navigator and the Table Data (i.e. over the record marker), the table abruptly jumps to the beginning."
FIXED-IN:2.8.6

M  +0    -1    kexi/widget/tableview/kexitableview.cpp
M  +3    -3    kexi/widget/utils/kexirecordmarker.cpp

http://commits.kde.org/calligra/8ca7607e13dd6cd5c55efc32c7aece89dc8978da
Comment 5 Jarosław Staniek 2014-07-31 20:54:32 UTC
Git commit b587d023acd3a6a9192e7ebea1ff8b191cdfdada by Jaroslaw Staniek.
Committed on 30/07/2014 at 15:31.
Pushed by staniek into branch 'calligra/2.8'.

Correct row selection/highlighting when clicking/hovering over record marker

(in table view)

Moreover, highlighting a row should not force it to be entirely visible (vertically) when it's partially visible.

This fix will also addresses issue reported at https://forum.kde.org/viewtopic.php?f=221&t=122102 "Any time the cursor crosses the border between the Project Navigator and the Table Data (i.e. over the record marker), the table abruptly jumps to the beginning."
FIXED-IN:2.8.6

M  +0    -1    kexi/widget/tableview/kexitableview.cpp
M  +3    -3    kexi/widget/utils/kexirecordmarker.cpp

http://commits.kde.org/calligra/b587d023acd3a6a9192e7ebea1ff8b191cdfdada
Comment 6 Jarosław Staniek 2015-10-31 21:04:10 UTC
*** Bug 341750 has been marked as a duplicate of this bug. ***