Correct row selection/highlighting when clicking/hovering over record marker

(in table view)

Moreover, highlighting a row should not force it to be entirely visible (vertically) when it's partially visible.

This fix will also addresses issue reported at https://forum.kde.org/viewtopic.php?f=221&t=122102 "Any time the cursor crosses the border between the Project Navigator and the Table Data (i.e. over the record marker), the table abruptly jumps to the beginning."

BUG:337914
FIXED-IN:2.8.6